[FIX] web: document layout configuration: style not scoped
Before this commit, all "td" tag were in display: flex;
Because of this some style was broken on mobile.

We could have just put this rule in the right scope but
we preferred to fix this correctly.

Steps to reproduce:
- Go to Settings
- General Settings
- Click on Configure Document Layout

Related to task-ID: 2184243

--- a/addons/web/static/src/scss/base_document_layout.scss
+++ b/addons/web/static/src/scss/base_document_layout.scss
@@ -78,6 +78,9 @@
             &:first-child {
                 text-align: left;
             }
+            &.o_price_total {
+                @extend .text-nowrap;
+            }
         }
     }
     .footer {
@@ -152,11 +155,5 @@
 @media (max-width: 620px) {
     .o_document_layout .o_group {
         flex-direction: column;
-    }
-}
-
-@media (max-width: 992px) {
-    .clearfix td {
-        display: flex;
     }
 }
